public/stylesheets/application.css
/* reset all styles with eric meyers' CSS reset */
html, body, div, span, applet, object, iframe, table, caption, tbody, tfoot, thead, tr, th, td, 
del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, 
h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, 
dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
	vertical-align: baseline;
	font-family: inherit;
	font-weight: inherit;
	font-style: inherit;
	font-size: 100%;
	text-decoration: none;
	color: inherit;
	outline: 0;
	padding: 0;
	margin: 0;
	border: 0;
	list-style: none;
	}
:focus {
	outline: 0;
	}
body {
	background: white;
	line-height: 1;
	color: #3c8915;
	}
ol, ul {
	list-style: none;
	}
table {
	border-collapse: separate;
	border-spacing: 0;
	}
caption, th, td {
	font-weight: normal;
	text-align: left;
	}
blockquote:before, blockquote:after, q:before, q:after {
	content: "";
	}
blockquote, q {
	quotes: "" "";
	}
/************************ begin styling here **************************/
li.date-over {
  color: rgba(60, 137, 21, 0.5);
}
html, body, p, a {
  font-family: "Adobe Garamond",
               Garamond,
               Geneva,
               Sand,
               Tahoma,
               Verdana,
               Arial;
}
body {
  background: #00bd1b url(../images/pitch.jpg) repeat;
  font-size: 16px;
  line-height: 22px;
}
a {
  color: #264292;
}
a:hover {
  color: #841124;
}
#page-container {
  width: 900px;
  margin: auto;
}
    #notice, #content, #footer {
      background-color: rgba(255, 255, 255, 0.7);
      margin: 20px 20px 20px 20px;
      padding: 10px 10px 10px 10px;
    }
    #title-and-navigation {
      margin-top: 30px;
      float: left;
      margin-bottom: 20px;
    }
        #title-and-navigation #title-image {
          float: left;
          width: 220px;
        }
        #title-and-navigation h1 {
          float: left;
          font-size: 70px;
          line-height: 130px;
          padding-bottom: 40px;
          display: block;
          width: 600px;
          color: #841124;
        }
        #title-and-navigation ul {
          margin: auto;
        }
        #title-and-navigation li a {
          float: left;
          padding: 8px;
          margin: 8px;
          background-color: rgba(255, 255, 255, 0.7);
        }
        #title-and-navigation li.checked a {
          background-color: rgba(050, 150, 050, 0.7);
        }
    #notice {
      clear: both;
      color: #841124;
    }
    #content {
      float: left;
      width: 840px;
    }
        #content h1 {
          font-size: 24px;
          color: #841124;
          margin: 3px 0px 20px 0px;
        }
        #content h2 {
          font-size: 18px;
          color: #841124;
          margin: 10px 0px 5px 0px;
        }
        #content h3 {
          font-size: 16px;
          color: #841124;
          margin: 10px 0px 5px 0px;
        }
        #content .errorExplanation {
          float: right;
          width: 100%;
        }
        #content ul {
          float: left;
        }
            #content ul.long_list {
              width: 100%;
            }
        #content li {
          height: 50px;
        }
            #content li.group {
              float: left;
              width: 360px;
              margin: 10px 10px 10px 10px;
              padding: 10px;
              border: 10px solid rgba(255, 255, 255, 0.5);
            }
                #content .preliminary li.group {
                  height: 340px;
                }
                #content .final li.group {
                  height: auto;
                }
            #content li.group h3 {
              margin: 5px 0px 5px 0px;
            }
            #content .rectangles li {
              float: left;
              display: block;
              width: 200px;
            }
            #content li strong {
              font-size: 20px;
              line-height: 30px;
            }
            #content li .team {
              display: block;
              float: left;
              width: 100px;
            }
            #content li .round {
              display: block;
              float: left;
              width: 160px;
            }
             #content li .teams, #content li .teams label {
                display: block;
                float: left;
                width: 200px;
              }
            #content li .score {
              display: block;
              float: left;
              width: 50px;
            }
            #content li .points {
              color: #841124;
              width: 40px;
              padding-left: 30px;
            }
            #content li .score input{
              width: 50px;
            }
            #content li .date {
              font-size: 12px;
              clear: both;
              width: 80px;
            }

        #content label {
          display: block;
          float: left;
        }
            #content .new_user label, #content .edit_user label {
              width: 200px;
            }
            #content #login label {
              width: 110px;
            }
        #content input {
          clear: both;
        }
            #content #new_user input, #content #edit_user input {
              width: 250px;
            }
            #content #new_user input#user_submit, #content #edit_user input#user_submit {
              width: auto;
              margin-top: 15px;
              margin-bottom: 20px;
            }
            #content #login input {
              width: 250px;
            }
            #content #login input#login_submit {
              width: auto;
              margin-top: 15px;
              margin-bottom: 20px;
            }
    #footer {
      float: left;
      width: 840px;
      font-size: 12px;
    }
        #footer h1 {
          display: block;
          margin: 10px;
          color: #841124;
        }
        #footer li {
          float: left;
          display: block;
          margin: 5px;
          padding: 5px;
        }
        #footer .date {
          font-size: 8px;
        }

